Added listing filtering. Updated tests.